1 file modified, 3 added, 3 deleted

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         <li>Aguacate</li>
       </ol>
     </ul>
+    <section>
+      <img src="/img/small.jpg" alt="No es la imagen de un perro"/>
+    </section>
   </body>
 </html>
 
