1 file modified, 3 deleted

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         <li>Manzanas</li>
         <li>Platanos</li>
         <li>
-          <a href="https://www.google.com/search?q=ZANDIAS&rlz=1C1CHBF_esMX819MX819&oq=ZANDIAS&aqs=chrome..69i57j46i10i433j0i512j0i10i131i433j0i10i512j46i512l2j0i10i512j0i512.957j0j7&sourceid=chrome&ie=UTF-8">Sandía</a>
+          <a
+            href="https://www.google.com/search?q=ZANDIAS&rlz=1C1CHBF_esMX819MX819&oq=ZANDIAS&aqs=chrome..69i57j46i10i433j0i512j0i10i131i433j0i10i512j46i512l2j0i10i512j0i512.957j0j7&sourceid=chrome&ie=UTF-8"
+            >Sandía</a
+          >
         </li>
       </ol>
 
@@ -70,7 +73,8 @@
       </ol>
     </ul>
     <section>
-      <img src="/img/small.jpg" alt="No es la imagen de un perro"/>
+      
+        
     </section>
   </body>
 </html>
