1 file modified, 1 deleted

--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
     <ul>
       <li>Frutas</li>
       <ol>
-        <li>Manzanas</li>
+        <li>Manzanas
+        <figure> <!-- Contenedor de una imagen -->
+          <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Square_200x200.png" alt="Es la imagen de una manzana"/>
+        </figure>
+        </li>
         <li>Platanos</li>
         <li>
           <a
