--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
       </ol>
     </ul>
     <section>
-      <video src="https://www.youtube.com/watch?v=fhiye7cpoXs"></video>        
+      <!-- * video = etiqueta para agregar un video
+           * controls = etiqueta que activa los controles de play, barra, y tiempo del video.
+           * preload="auto" = precarga el video para renderizar el video más rápido.      
+      -->
+      <video src="https://cdn.jsdelivr.net/gh/ercabelloe/web-platform-ercabelloe-test@master/VID-20201017-WA0000.mp4" controls preload="auto"></video>        
     </section>
   </body>
 </html>
